<resources>
    <string name="clear">清空</string>
    <string name="confirm">确认</string>
    <string name="price_setting">激活价格</string>
    <string name="function">功能</string>
    <string name="mr">有</string>
    <string name="mrl">无</string>
    <string name="low">低</string>
    <string name="low_medium">中低</string>
    <string name="medium">中</string>
    <string name="medium_high">中高</string>
    <string name="high">高</string>
    <string name="aesthetic">美观</string>
    <string name="price">价格¥：</string>
    <string name="delivery">交付周期</string>
    <string name="major">基础参数</string>
    <string name="load">额定载重kg</string>
    <string name="speed">额定速度m/s</string>
    <string name="ride">舒适度</string>
    <string name="driver_service">司机服务</string>
    <string name="icon_qianjin">&#xe61a;</string>
    <string name="icon_account">&#xe63a;</string>
    <string name="icon_password">&#xe60c;</string>
    <string name="icon_zhe_die_open">&#xe614;</string>
    <string name="icon_zhe_die_close">&#xe6a0;</string>
    <string name="icon_more">&#xe628;</string>
    <string name="qms_supported_type">支持类型：</string>
    <string name="qms_feedback">我要反馈</string>
    <string name="qms_response">我的反馈</string>
    <string name="qms_appendix_list">添加附件</string>
    <string name="qms_problem_description">问题描述</string>
    <string name="qms_failure_mode">失效模式</string>
    <string name="qms_sub_system">子系统</string>
    <string name="qms_assembly">组件</string>
    <string name="qms_component">部件</string>
    <string name="qms_part">零件</string>
    <string name="qms_contract_information">合同信息</string>
    <string name="qms_contract_no">合同号</string>
    <string name="qms_project_name">项目名称</string>
    <string name="qms_submit">提交</string>
    <string name="qms_save">保存</string>
    <string name="current_version">当前版本</string>
    <string name="system_setting">系统设置</string>
    <string name="language_setting">语言设置</string>
    <string name="voice_setting">语音播报</string>
    <string name="english">英文</string>
    <string name="chinese">中文</string>
    <string name="model_upgrade">模型升级</string>
    <string name="exit_hint">再点一次退出应用程序</string>
    <string name="nav_home">首页</string>
    <string name="nav_tool">工具</string>
    <string name="nav_bi">BI</string>
    <string name="nav_me">我的</string>
    <string name="label_system_setting">系统设置</string>
    <string name="rename">重命名</string>
    <string name="cancel">取消</string>
    <string name="about_company">公司介绍</string>
    <string name="sales_mgmt">销售管理</string>
    <string name="quality_management">质量管理</string>
    <string name="after_sale_maintenance">售后维保</string>
    <string name="company_profile">公司简介</string>
    <string name="product_introduction">产品介绍</string>
    <string name="videos">宣传视频</string>
    <string name="reference_project">项目案例</string>
    <string name="project_application">项目申请</string>
    <string name="project_approval">项目审批</string>
    <string name="quotatoin_applicatoin">项目报价</string>
    <string name="quotatoin_approval">报价审批</string>
    <string name="contract_review">合同评审</string>
    <string name="sales_support">销售支持</string>
    <string name="maintenance_support">维保支持</string>
    <string name="consulting">我要咨询</string>
    <string name="report">我要反馈</string>
    <string name="my_report">我的反馈</string>
    <string name="compare">对比</string>
    <string name="add">新增</string>
    <string name="edit">编辑</string>
    <string name="edit_">编辑</string>
    <string name="delete">删除</string>
    <string name="new_scheme">新建方案</string>
    <string name="favorites_name">收藏名称</string>
    <string name="elevator_type">电梯类型</string>
    <string name="machine_room">有无机房</string>
    <string name="hoistway_width">井道宽度(mm)</string>
    <string name="hoistway_depth">井道深度(mm)</string>
    <string name="number_of_floors">楼层数</string>
    <string name="comfort">舒适</string>
    <string name="service">服务</string>
    <string name="safety">安全</string>
    <string name="collection_time">收藏时间</string>
    <string name="favorites_list">收藏列表</string>
    <string name="parameter_rule">参数规格</string>
    <string name="passenger_elevator">乘客电梯</string>
    <string name="equipment_budget">设备预算</string>
    <string name="confirm_">确 定</string>
    <string name="equipment_price">设备价格</string>
    <string name="proposal">方案</string>
    <string name="information">详细信息</string>
    <string name="Attachment">添加附件：</string>
    <string name="standard_functions">标配参数</string>
    <string name="configuration">配置</string>
    <string name="optional_parameters">选配参数</string>
    <string name="layout_parameters">土建参数</string>
    <string name="car_decoration">轿厢装潢</string>
    <string name="functionalities">功能参数</string>
    <string name="deviation_request">非标需求</string>
    <string name="scheme_details">方案详情</string>
    <string name="deviation_details">详细需求：</string>
    <string name="msg1">最多只允许添加5个图片</string>
    <string name="shoot">拍照</string>
    <string name="album">相册</string>
    <string name="msg2">当前配置已选择</string>
    <string name="save">保存</string>
    <string name="downloading">下载中</string>
    <string name="look_look">看一看</string>
    <string name="accept">接受</string>
    <string name="reduction">减一减</string>
    <string name="price_change">价格变更</string>
    <string name="find_solution">方案推荐</string>
    <string name="reduction_with_modified">减配修改</string>
    <string name="msg3">是否确认调整为此方案？</string>
    <string name="msg4">选择标签以降低您方案中相应价格</string>
    <string name="scheme_subtraction">方案减配：</string>
    <string name="query">查询</string>
    <string name="last_batch">上一批</string>
    <string name="next_batch">下一批</string>
    <string name="msg5">价格变更为：</string>
    <string name="msg6">是否接受？</string>
    <string name="find">查找</string>
    <string name="elevator_scheme">直梯方案</string>
    <string name="elevator_">直梯</string>
    <string name="escalator_scheme">扶梯方案</string>
    <string name="escalator_">扶梯</string>
    <string name="apply_layout">土建申请</string>
    <string name="decoration">效果申请</string>
    <string name="msg7">功能暂未开放</string>
    <string name="msg8">暂无数据</string>
    <string name="msg9">该部件暂未开放搜索功能</string>
    <string name="msg10">请选择其中一个部件</string>
    <string name="msg11">该方案已收藏</string>
    <string name="compare_detail">对比详细</string>
    <string name="million_yuan">万元</string>
    <string name="smart_search_photo">找起来太麻烦？试试智能拍照识别</string>
    <string name="smart_search_color">按颜色找一找</string>
    <string name="smart_search_style">按风格找一找</string>
    <string name="smart_search_material">按材质找一找</string>
    <string name="smart_search_costom">定制匹配</string>
    <string name="smart_search_person">人像匹配</string>
    <string name="smart_search_architecture">建筑匹配</string>
    <string name="msg12">用户拒绝了该权限</string>
    <string name="msg13">权限被拒绝，请在设置里面开启相应权限，若无相应权限会影响使用</string>
    <string name="delete_collection">删除收藏</string>
    <string name="msg14">是否确认删除收藏信息？</string>
    <string name="house_elevator">家用电梯</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="feedback">建议反馈</string>
    <string name="logout">退出登录</string>
    <string name="editing_personal">编辑个人资料</string>
    <string name="sales_trends">销售趋势</string>
    <string name="sales_statistics">销售统计</string>
    <string name="floor_parameters">层站参数</string>
    <string name="starting_floor">起始楼层：</string>
    <string name="end_floor">结束楼层：</string>
    <string name="floor_height">楼层高度：</string>
    <string name="hegiht">楼层高度</string>
    <string name="layout_floor">土建楼层</string>
    <string name="identify_floor">标识楼层</string>
    <string name="serving_floor_a">服务层A</string>
    <string name="serving_floor_c">服务层C</string>
    <string name="esc_decoration">扶梯装潢</string>
    <string name="requirement">非标需求</string>
    <string name="qms_report">QMS报表</string>
    <string name="android_download">\"E-AI\" 安卓手机下载</string>
    <string name="ios_download">\"E-AI\" 苹果手机下载</string>
    <string name="login">登录</string>
    <string name="msg15">请登录账号</string>
    <string name="msg16">请填写建议和意见</string>
    <string name="msg17">感谢您的建议和意见</string>
    <string name="hint_suggestion">请您留下宝贵的建议和意见</string>
    <string name="feedback_image_title">图片（选填，提供问题截图）</string>
    <string name="hint_contact_call">选填，便于我们与你联系</string>
    <string name="contact_number">联系电话</string>
    <string name="submit_">提 交</string>
    <string name="copyright">版权信息</string>
    <string name="version_number">版本号</string>
    <string name="scan_to_scan">扫一扫立即体验！</string>
    <string name="real_name">真实姓名</string>
    <string name="email">邮箱</string>
    <string name="company_name">公司名称</string>
    <string name="modify_password">修改密码</string>
    <string name="hint1">请填写真实姓名</string>
    <string name="hint2">请填写邮箱</string>
    <string name="hint3">请填写公司名称</string>
    <string name="msg18">内容为空，请填写</string>
    <string name="msg19">邮箱格式错误，请重新填写</string>
    <string name="hint4">请输入用户名</string>
    <string name="hint5">请输入密码</string>
    <string name="remember_username">记住用户名</string>
    <string name="register_now">立即注册</string>
    <string name="msg20">用户名为空，请填写</string>
    <string name="msg21">密码为空，请填写</string>
    <string name="msg22">手机号码为空，请填写</string>
    <string name="msg23">验证码为空，请填写</string>
    <string name="msg24">确认密码为空，请填写</string>
    <string name="msg25">确认密码与密码不一致，请重启填写</string>
    <string name="regain">重新获取</string>
    <string name="second">s</string>
    <string name="hint6">手机号码(登录账号)</string>
    <string name="hint7">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="hint8">设置密码</string>
    <string name="hint9">确认密码</string>
    <string name="hint10">请填写旧密码</string>
    <string name="hint11">请输入新密码</string>
    <string name="hint12">请输入确认密码</string>
    <string name="msg26">旧密码为空，请填写</string>
    <string name="msg27">新密码为空，请填写</string>
    <string name="msg28">修改成功</string>
    <string name="name">姓名</string>
    <string name="inquiry_number">询价编号</string>
    <string name="product_name">产品名称</string>
    <string name="quantity">数量</string>
    <string name="product_parameters">产品主参数</string>
    <string name="estimated_delivery_time">预计交货期(年)</string>
    <string name="guarantee_period">质保期(月)</string>
    <string name="free_warranty_period">免保期(月)</string>
    <string name="total_price_of_equipment">设备总价格</string>
    <string name="elevator_number">梯号</string>
    <string name="version">版本</string>
    <string name="confirm_version">确认版本</string>
    <string name="non_standard_status">非标状态</string>
    <string name="submission_date">提交日期</string>
    <string name="inquiry_process_status">询价流程状态</string>
    <string name="submit_for_review">提交价格审批</string>
    <string name="total">合计</string>
    <string name="standard_equipment_price">设备标准价</string>
    <string name="standard_installation_price">安装标准价</string>
    <string name="equipment_price_after_discount">折后设备价</string>
    <string name="installation_price_after_discount">折后安装费</string>
    <string name="transportation_fee">运输费</string>
    <string name="inspection_fee">验收费(含开工费)</string>
    <string name="warranty_fee">免保费</string>
    <string name="equipment">设备预留费</string>
    <string name="other_fees_of_installation">安装其他费</string>
    <string name="actual_unit_price_of_equipment">设备实际单价</string>
    <string name="actual_unit_price_of_installation">安装实际单价</string>
    <string name="actual_equipment_price">设备实际总价</string>
    <string name="actual_installation_price">安装实际总价</string>
    <string name="adjustable_rate_of_equipment_price">设备浮动率</string>
    <string name="adjustable_rate_of_installation_price">安装浮动率</string>
    <string name="total_price_of_equipment_contract">设备合同总价</string>
    <string name="total_price_of_installation_contract">安装合同总价</string>
    <string name="code">代号</string>
    <string name="selling_price">销售价格</string>
    <string name="cost_price">成本价格</string>
</resources>