<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/solid_border"
        android:hint="@string/hint10"
        android:inputType="textPassword"
        android:textSize="@dimen/middle_font" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/solid_border"
        android:hint="@string/hint11"
        android:inputType="textPassword"
        android:textSize="@dimen/middle_font" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/solid_border"
        android:hint="@string/hint12"
        android:inputType="textPassword"
        android:textSize="@dimen/middle_font" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_main_radius"
        android:text="@string/submit_"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_font" />
</LinearLayout>